using Microsoft.AspNetCore.Identity;

namespace Rally.Core.Entities
{
    public class User : IdentityUser
    { 
    }
}
